@@ -8,8 +8,8 @@ Author@R: c(person("Mauricio", "Zambrano-Bigiarini", email = "mauricio.zambrano@
 Maintainer: Mauricio Zambrano Bigiarini <mauricio.zambrano@ing.unitn.it>
 Description: S3 functions implementing both statistical and graphical goodness-of-fit measures between observed and simulated values, mainly oriented to be used during the calibration, validation, and application of hydrological models. Missing values in observed and/or simulated values can removed before the computations. Comments / questions / collaboration of any kind are very welcomed.
 License: GPL (>=2)
-Depends: R (>= 2.10.0) 
-Imports: hydroTSM (>= 0.3-0), zoo (>= 1.7-2), xts (>= 0.8-2)
+Depends: R (>= 2.10.0), zoo (>= 1.7-2)
+Imports: hydroTSM (>= 0.3-0), xts (>= 0.8-2)
 HowToCite: > citation("hydroGOF")
 URL: http://www.rforge.net/hydroGOF/, http://cran.r-project.org/web/packages/hydroGOF/
 BugReports: https://www.rforge.net/bugzilla/describecomponents.cgi?product=hydroGOF
